After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682430 - Fixes for gnome-initial-setup/gdm integration
Fixes for gnome-initial-setup/gdm integration
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2012-08-22 07:28 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2012-08-24 21:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdm-simple-slave: Correct path to trigger file (908 bytes, patch)
2012-08-22 07:28 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
gdm-simple-slave: Make sure to use correct username when launching our session (1.18 KB, patch)
2012-08-22 07:28 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
gdm-simple-slave: Use the correct initial-setup username (2.78 KB, patch)
2012-08-22 07:28 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2012-08-22 07:28:40 UTC
See patches. This fixes the trigger of the "delete the root user" bug
that I got hit by today. We already fixed accountsservice to never honor
this again.
Comment 1 Jasper St. Pierre (not reading bugmail) 2012-08-22 07:28:43 UTC
Created attachment 222102 [details] [review]
gdm-simple-slave: Correct path to trigger file

LOCALSTATEDIR doesn't end with a path separator
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-08-22 07:28:47 UTC
Created attachment 222103 [details] [review]
gdm-simple-slave: Make sure to use correct username when launching our session
Comment 3 Jasper St. Pierre (not reading bugmail) 2012-08-22 07:28:49 UTC
Created attachment 222104 [details] [review]
gdm-simple-slave: Use the correct initial-setup username
Comment 4 Ray Strode [halfline] 2012-08-24 21:24:39 UTC
push push push
Comment 5 Jasper St. Pierre (not reading bugmail) 2012-08-24 21:30:18 UTC
Attachment 222102 [details] pushed as 46d3dd0 - gdm-simple-slave: Correct path to trigger file
Attachment 222103 [details] pushed as cb0a2d4 - gdm-simple-slave: Make sure to use correct username when launching our session
Attachment 222104 [details] pushed as b12ec79 - gdm-simple-slave: Use the correct initial-setup username