gdm-simple-slave: Make sure to use correct username when launching our session

https://bugzilla.gnome.org/show_bug.cgi?id=682430